[GUI] Fix governance nav button hover css
Previously, the governance nav button was not showing the same
background color as the rest of the nav buttons. This fixes it to be
the same as the others.

Also slightly increase the size of the icon.

Github-Pull: #2665
Rebased-From: b801219a878c1fb001b21fed2d6cdd124087ec82

--- a/src/qt/pivx/res/css/style_dark.css
+++ b/src/qt/pivx/res/css/style_dark.css
@@ -397,7 +397,7 @@ QPushButton[cssClass="btn-check-cold-staking"]:checked {
 *[cssClass="btn-nav-governance"] {
     qproperty-icon: url("://ic-nav-governance") off,
     url("://ic-nav-governance-active") on ;
-    qproperty-iconSize: 32px 32px;
+    qproperty-iconSize: 36px 36px;
     background-color:transparent;
     font-size:14px;
     color: #938da5;
@@ -416,14 +416,14 @@ QPushButton[cssClass="btn-check-cold-staking"]:checked {
 
 *[cssClass="btn-nav-governance"]:hover {
     qproperty-icon: url("://ic-nav-governance-hover");
-    qproperty-iconSize: 32px 32px;
-    background-color:#0f0b16;
+    qproperty-iconSize: 36px 36px;
+    background-color: #1A000000;
     color: #938da5;
 }
 
 *[cssClass="btn-nav-governance-active"] {
     qproperty-icon:url("://ic-nav-governance-active")  ;
-    qproperty-iconSize: 32px 32px;
+    qproperty-iconSize: 36px 36px;
     background-color: #0f0b16;
     font-size:14px;
     color: #B088FF;
