--- a/src/qt/pivx/res/css/style_light.css
+++ b/src/qt/pivx/res/css/style_light.css
@@ -357,7 +357,7 @@ QPushButton[cssClass="img-nav-logo"] {
 *[cssClass="btn-nav-governance"] {
     qproperty-icon: url("://ic-nav-governance") off,
                     url("://ic-nav-governance-active") on ;
-    qproperty-iconSize: 32px 32px;
+    qproperty-iconSize: 36px 36px;
     background-color:transparent;
     font-size:14px;
     color: #938da5;
@@ -376,14 +376,14 @@ QPushButton[cssClass="img-nav-logo"] {
 
 *[cssClass="btn-nav-governance"]:hover {
     qproperty-icon: url("://ic-nav-governance-hover");
-    qproperty-iconSize: 32px 32px;
-    background-color: transparent;
+    qproperty-iconSize: 36px 36px;
+    background-color: #1A000000;
     color: #938da5;
 }
 
 *[cssClass="btn-nav-governance-active"] {
     qproperty-icon:url("://ic-nav-governance-active")  ;
-    qproperty-iconSize: 32px 32px;
+    qproperty-iconSize: 36px 36px;
     background-color: qlineargradient(x1:0, x2: 1, stop: 0 #3c2559, stop: 1 #1f162b);
     font-size:14px;
     color: #B088FF;
